2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/Internal_Costing__c.object-meta.xml
<CustomObject>
    <description>Comprises of all cost components associated with opportunities.</description>
    <label>Internal Costing</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Internal Cost</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Costing</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>