2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/AWB_Fee__c.field-meta.xml
<CustomField>
    <fullName>AWB_Fee__c</fullName>
    <formula>AWB_Fee_No_of_AWB__c * 25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AWB Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>