2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/AWB_Fee_No_of_AWB__c.field-meta.xml
<CustomField>
    <fullName>AWB_Fee_No_of_AWB__c</fullName>
    <label>AWB Fee (No. of AWB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>