2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/BL_Fee__c.field-meta.xml
<CustomField>
    <fullName>BL_Fee__c</fullName>
    <formula>BL_Fee_No_of_BL__c * 260</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BL Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>