2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/BL_Fee_No_of_BL__c.field-meta.xml
<CustomField>
    <fullName>BL_Fee_No_of_BL__c</fullName>
    <label>BL Fee (No. of BL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>