2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Cleaning_Services_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Services_Lumpsum__c</fullName>
    <label>Cleaning Services (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>