2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Commissions_IML__c.field-meta.xml
<CustomField>
    <fullName>Commissions_IML__c</fullName>
    <description>Commissions accual for International Marketing Representatives</description>
    <formula>IF(
IML_Commissions_Payable__c = true, 
0.05 * Quote_Amount__c, 
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Commissions accual for International Marketing Representatives</inlineHelpText>
    <label>Commissions (IML)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>