2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Container_Haulage_for_20_FCL__c.field-meta.xml
<CustomField>
    <fullName>Container_Haulage_for_20_FCL__c</fullName>
    <description>Expected number of haulage trips for 20&apos; FCL containers.</description>
    <inlineHelpText>Expected number of haulage trips for 20&apos; FCL containers.</inlineHelpText>
    <label>Haulage for 20&apos; FCL (No. of trips)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>