2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Cost_of_Liftvan__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Liftvan__c</fullName>
    <formula>Liftvan_Gross_Cuft__c * 1.35</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost_of_Liftvan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>