2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Crating_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Crating_Lumpsum__c</fullName>
    <label>Crating (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>