2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Customs_Clearance_Permit__c.field-meta.xml
<CustomField>
    <fullName>Customs_Clearance_Permit__c</fullName>
    <formula>Customs_Clearance_Permit_Number__c * 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customs Clearance &amp; Permit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>