2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Customs_Clearance_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Customs_Clearance_Permit_Number__c</fullName>
    <label>Customs Clearance &amp; Permit (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>