2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/DA_Other_Charges_1_in_SGD__c.field-meta.xml
<CustomField>
    <fullName>DA_Other_Charges_1_in_SGD__c</fullName>
    <description>Other cost components billable by appointed Destination Agent in Singapore Dollars.</description>
    <inlineHelpText>Other cost components billable by appointed Destination Agent in Singapore Dollars.</inlineHelpText>
    <label>DA Other Charges 1 (in SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>