2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/DA_Other_Charges_3__c.field-meta.xml
<CustomField>
    <fullName>DA_Other_Charges_3__c</fullName>
    <description>Other cost components billable by appointed Destination Agent</description>
    <inlineHelpText>Other cost components billable by appointed Destination Agent</inlineHelpText>
    <label>DA Other Charges 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>