2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Destination_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Destination_Lumpsum__c</fullName>
    <description>Destination Service Charges quoted by appointed destination agent</description>
    <inlineHelpText>Destination Service Charges quoted by appointed destination agent</inlineHelpText>
    <label>Destination Lumpsum (in SGD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>