2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Destination_Storage__c.field-meta.xml
<CustomField>
    <fullName>Destination_Storage__c</fullName>
    <formula>Destination_Storage_Volume_in_cuft__c *  Destination_Storage_Unit_cost_per_cuft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Storage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>