2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Destination_Storage_Unit_cost_per_cuft__c.field-meta.xml
<CustomField>
    <fullName>Destination_Storage_Unit_cost_per_cuft__c</fullName>
    <label>Destination Storage (Unit cost per cuft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>