2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/DS_Labour__c.field-meta.xml
<CustomField>
    <fullName>DS_Labour__c</fullName>
    <description>changed from 0.60 to 0.75 on 27052013 until Aug 2013</description>
    <formula>DS_Labour_Volume_in_cuft__c * 0.75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>