2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/DS_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>DS_Sub_Total__c</fullName>
    <formula>Destination_Lumpsum__c +  DA_Other_Charges_1_in_SGD__c +  DA_Other_Charges_2_in_SGD__c +  DA_Other_Charges_3_in_SGD__c +  DA_Other_Charges_4_in_SGD__c +  DA_Other_Charges_5_in_SGD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>