2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/DS_Warehouse_Handling__c.field-meta.xml
<CustomField>
    <fullName>DS_Warehouse_Handling__c</fullName>
    <formula>DS_Warehouse_Handling_Volume_in_cuft__c *  DS_Warehouse_Handling_U_cst_cuft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DS Warehouse Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>