2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/DS_Warehouse_Handling_U_cst_cuft__c.field-meta.xml
<CustomField>
    <fullName>DS_Warehouse_Handling_U_cst_cuft__c</fullName>
    <label>DS Warehouse Handling  (U.cst / cuft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>