2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/DS_Warehouse_Handling_Volume_in_cuft__c.field-meta.xml
<CustomField>
    <fullName>DS_Warehouse_Handling_Volume_in_cuft__c</fullName>
    <description>https://emea.salesforce.com/p/setup/field/NewCustomFieldStageManager</description>
    <label>DS Warehouse Handling (Volume in cuft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>