2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Export_Transfer_Fee_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Export_Transfer_Fee_Lumpsum__c</fullName>
    <label>Export Transfer Fee (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>