2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Freight_Origin_Destination__c.field-meta.xml
<CustomField>
    <fullName>Freight_Origin_Destination__c</fullName>
    <label>Freight Origin &amp;  Destination</label>
    <type>TextArea</type>
</CustomField>