2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Freight_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Freight_Sub_Total__c</fullName>
    <formula>Ocean_Freight_Lumpsum__c +  
Air_Freight_Lumpsum__c +  
Freight_Surcharge_Lumpsum__c +  
Freight_THC_LOLO_for_20_FCL__c +  
Freight_THC_LOLO_for_40_FCL__c +  
Freight_THC_for_LCL__c +  
THC_for_Air_Lumpsum__c +  
Misc_for_20_FCL__c +  
Misc_for_40_FCL__c +  
LCL_Processing_Fee_Lumpsum__c +  
Export_Transfer_Fee_Lumpsum__c +  
Haulage_for_20_FCL__c +  
Haulage_for_40_FCL__c + 
Haulage_for_40_HC__c +
Fumigation_for_20_FCL__c +  
Fumigation_for_40_FCL__c + 
Seal_Fee__c + 
Fumigation_for_LCL_Lumpsum__c +  
BL_Fee__c +  
AWB_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>