2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Freight_THC_for_LCL__c.field-meta.xml
<CustomField>
    <fullName>Freight_THC_for_LCL__c</fullName>
    <formula>Freight_THC_for_LCL_No_of_shipments__c * 28</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight THC for LCL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>