2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Freight_THC_for_LCL_No_of_shipments__c.field-meta.xml
<CustomField>
    <fullName>Freight_THC_for_LCL_No_of_shipments__c</fullName>
    <label>Freight THC for LCL (No. of shipments)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>