2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Freight_THC_LOLO_for_20_FCL_cntr__c.field-meta.xml
<CustomField>
    <fullName>Freight_THC_LOLO_for_20_FCL_cntr__c</fullName>
    <label>Freight THC for 20’ FCL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>