2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Fumigation_for_20_FCL__c.field-meta.xml
<CustomField>
    <fullName>Fumigation_for_20_FCL__c</fullName>
    <formula>Fumigation_for_20_FCL_No_of_container__c * 150</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fumigation for 20’ FCL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>