2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Fumigation_for_LCL_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Fumigation_for_LCL_Lumpsum__c</fullName>
    <label>Fumigation for LCL (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>