2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Gross_Profit_Percentage_DS__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Percentage_DS__c</fullName>
    <formula>( Quote_Amount__c - Total_Cost_DS__c ) /  Quote_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Profit Percentage DS</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>