2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/GST_Duties__c.field-meta.xml
<CustomField>
    <fullName>GST_Duties__c</fullName>
    <label>GST &amp; Duties (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>