2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Handyman_Services__c.field-meta.xml
<CustomField>
    <fullName>Handyman_Services__c</fullName>
    <formula>90 *  Handyman_Services_No_of_hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handyman Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>