2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Handyman_Services_No_of_hours__c.field-meta.xml
<CustomField>
    <fullName>Handyman_Services_No_of_hours__c</fullName>
    <description>Expected number of hours of Handyman Service</description>
    <inlineHelpText>Expected number of hours of Handyman Service</inlineHelpText>
    <label>Handyman Services (No. of hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>