2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Haulage_for_20_FCL__c.field-meta.xml
<CustomField>
    <fullName>Haulage_for_20_FCL__c</fullName>
    <formula>420 *  Container_Haulage_for_20_FCL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Haulage for 20&apos; FCL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>