2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Haulage_for_40_HC__c.field-meta.xml
<CustomField>
    <fullName>Haulage_for_40_HC__c</fullName>
    <formula>Haulage_for_40_HC_No_of_trips__c * 555</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Haulage for 40&apos; HC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>