2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Haulage_for_40_HC_No_of_trips__c.field-meta.xml
<CustomField>
    <fullName>Haulage_for_40_HC_No_of_trips__c</fullName>
    <label>Haulage for 40&apos; HC (No. of trips)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>