2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/IML_Commissions_Payable__c.field-meta.xml
<CustomField>
    <fullName>IML_Commissions_Payable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IML Commissions Payable</label>
    <type>Checkbox</type>
</CustomField>