2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Insurance_Comms_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Comms_Sub_Total__c</fullName>
    <formula>Insurance__c + Lumpsum_Insurance_Formula_Currency__c +  Commissions_IML__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance &amp; Comms Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>