2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Insurance_Total_insured_value__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Total_insured_value__c</fullName>
    <label>Insurance (Total insured value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>