2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Labour__c.field-meta.xml
<CustomField>
    <fullName>Labour__c</fullName>
    <description>changed from 1.15 to 1.25 on 27052013 until end of Aug 2013</description>
    <formula>1.25 *  Labour_Volume_in_cuft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Labour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>