2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/LCL_Processing_Fee_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>LCL_Processing_Fee_Lumpsum__c</fullName>
    <label>LCL Processing Fee (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>