2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Liftvan_Gross_Cuft__c.field-meta.xml
<CustomField>
    <fullName>Liftvan_Gross_Cuft__c</fullName>
    <label>Liftvan Gross Cuft</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>