2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Local_Transfer_Lumpsum__c.field-meta.xml
<CustomField>
    <fullName>Local_Transfer_Lumpsum__c</fullName>
    <label>Local Transfer (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>