2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/LOLO_for_20_FCL_cntr__c.field-meta.xml
<CustomField>
    <fullName>LOLO_for_20_FCL_cntr__c</fullName>
    <label>LOLO for 20&apos; FCL (cntr)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>