2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/LOLO_for_40_FCL__c.field-meta.xml
<CustomField>
    <fullName>LOLO_for_40_FCL__c</fullName>
    <formula>LOLO_for_40_FCL_cntr__c * 82.5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LOLO for 40’ FCL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>