2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Long_Carry__c.field-meta.xml
<CustomField>
    <fullName>Long_Carry__c</fullName>
    <description>Chargeable usually due to bad access.</description>
    <inlineHelpText>Chargeable usually due to bad access.</inlineHelpText>
    <label>Long Carry (Lumpsum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>