2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Lumpsum_Insurance_Formula_Currency__c.field-meta.xml
<CustomField>
    <fullName>Lumpsum_Insurance_Formula_Currency__c</fullName>
    <formula>Lumpsum_Insurance_insured_value__c * 0.035 +  Lumpsum_Insurance_H_V_I_insured_value__c * 0.035</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lumpsum Insurance Formula (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>