2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Lumpsum_Insurance_insured_value__c.field-meta.xml
<CustomField>
    <fullName>Lumpsum_Insurance_insured_value__c</fullName>
    <label>Lumpsum Insurance (insured value)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>