2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <formula>1.5 *  Material_Volume_in_cuft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>