2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Misc_for_20_FCL__c.field-meta.xml
<CustomField>
    <fullName>Misc_for_20_FCL__c</fullName>
    <formula>Misc_for_20_FCL_No_of_container__c * 50</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Misc for 20’ FCL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>