2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/Misc_for_40_FCL_No_of_container__c.field-meta.xml
<CustomField>
    <fullName>Misc_for_40_FCL_No_of_container__c</fullName>
    <label>Misc for 40’ FCL (No. of container)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>