2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/OA_Other_Charges_1__c.field-meta.xml
<CustomField>
    <fullName>OA_Other_Charges_1__c</fullName>
    <label>OA Other Charges 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>