2nd training/Community/Community/Community1/force-app/main/default/objects/Internal_Costing__c/fields/OA_Other_Charges_2__c.field-meta.xml
<CustomField>
    <fullName>OA_Other_Charges_2__c</fullName>
    <defaultValue>&quot;MISC&quot;</defaultValue>
    <label>OA Other Charges 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>